parser.output
Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | %empty

    4 declaration: varDeclaration
    5            | funDeclaration
    6            | recDeclaration

    7 recDeclaration: RECORD RECTYPE LCB localDeclarations RCB

    8 varDeclaration: typeSpecifier varDeclList SCOLON

    9 scopedVarDeclaration: scopedTypeSpecifier varDeclList SCOLON

   10 varDeclList: varDeclList COMMA varDeclInitialize
   11            | varDeclInitialize

   12 varDeclInitialize: varDeclId COLON simpleExpression
   13                  | varDeclId

   14 varDeclId: ID LSQB NUMCONST RSQB
   15          | ID

   16 scopedTypeSpecifier: STATIC typeSpecifier
   17                    | typeSpecifier

   18 typeSpecifier: returnTypeSpecifier
   19              | RECTYPE

   20 returnTypeSpecifier: INT
   21                    | BOOL
   22                    | CHAR

   23 funDeclaration: typeSpecifier ID LPAREN params RPAREN statement
   24               | ID LPAREN params RPAREN statement

   25 params: paramList
   26       | %empty

   27 paramList: paramList SCOLON paramTypeList
   28          | paramTypeList

   29 paramTypeList: typeSpecifier paramIdList

   30 paramIdList: paramIdList COMMA paramId
   31            | paramId

   32 paramId: ID LSQB RSQB
   33        | ID

   34 statement: matched
   35          | unmatched

   36 matched: IF LPAREN simpleExpression RPAREN matched ELSE matched
   37        | iterationHeader matched
   38        | otherStmt

   39 unmatched: IF LPAREN simpleExpression RPAREN matched
   40          | IF LPAREN simpleExpression RPAREN unmatched
   41          | IF LPAREN simpleExpression RPAREN matched ELSE unmatched
   42          | iterationHeader unmatched

   43 iterationHeader: WHILE LPAREN simpleExpression RPAREN

   44 otherStmt: expressionStmt
   45          | compoundStmt
   46          | returnStmt
   47          | breakStmt

   48 compoundStmt: LCB localDeclarations statementList RCB

   49 localDeclarations: localDeclarations scopedVarDeclaration
   50                  | %empty

   51 statementList: statementList statement
   52              | %empty

   53 expressionStmt: expression SCOLON
   54               | SCOLON

   55 returnStmt: RETURN SCOLON
   56           | RETURN expression SCOLON

   57 breakStmt: BREAK SCOLON

   58 expression: mutable ASSIGN expression
   59           | mutable ADDASS expression
   60           | mutable SUBASS expression
   61           | mutable MULASS expression
   62           | mutable DIVASS expression
   63           | mutable INC
   64           | mutable DEC
   65           | simpleExpression

   66 simpleExpression: simpleExpression OR andExpression
   67                 | andExpression

   68 andExpression: andExpression AND unaryRelExpression
   69              | unaryRelExpression

   70 unaryRelExpression: NOT unaryRelExpression
   71                   | relExpression

   72 relExpression: sumExpression relop sumExpression
   73              | sumExpression

   74 relop: LESSEQ
   75      | LTHAN
   76      | GTHAN
   77      | GRTEQ
   78      | EQ
   79      | NOTEQ

   80 sumExpression: sumExpression sumop term
   81              | term

   82 sumop: PLUS
   83      | DASH

   84 term: term mulop unaryExpression
   85     | unaryExpression

   86 mulop: ASTERISK
   87      | FSLASH
   88      | MOD

   89 unaryExpression: unaryop unaryExpression
   90                | factor

   91 unaryop: DASH
   92        | ASTERISK
   93        | RANDOM

   94 factor: immutable
   95       | mutable

   96 mutable: mutable LSQB expression RSQB
   97        | mutable PERIOD ID
   98        | ID

   99 immutable: LPAREN expression RPAREN
  100          | call
  101          | constant

  102 call: ID LPAREN args RPAREN

  103 args: argList
  104     | %empty

  105 argList: argList COMMA expression
  106        | expression

  107 constant: NUMCONST
  108         | CHARCONST
  109         | BOOLCONST


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 14 15 23 24 32 33 97 98 102
NUMCONST (259) 14 107
CHARCONST (260) 108
RECTYPE (261) 7 19
BOOLCONST (262) 109
RECORD (263) 7
STATIC (264) 16
INT (265) 20
BOOL (266) 21
CHAR (267) 22
IF (268) 36 39 40 41
ELSE (269) 36 41
WHILE (270) 43
RETURN (271) 55 56
BREAK (272) 57
OR (273) 66
AND (274) 68
NOT (275) 70
EQ (276) 78
NOTEQ (277) 79
MULASS (278) 61
INC (279) 63
ADDASS (280) 59
DEC (281) 64
SUBASS (282) 60
DIVASS (283) 62
LESSEQ (284) 74
GRTEQ (285) 77
ASTERISK (286) 86 92
RANDOM (287) 93
DASH (288) 83 91
FSLASH (289) 87
LPAREN (290) 23 24 36 39 40 41 43 99 102
RPAREN (291) 23 24 36 39 40 41 43 99 102
PLUS (292) 82
COMMA (293) 10 30 105
LSQB (294) 14 32 96
RSQB (295) 14 32 96
COLON (296) 12
SCOLON (297) 8 9 27 53 54 55 56 57
LTHAN (298) 75
ASSIGN (299) 58
GTHAN (300) 76
MOD (301) 88
PERIOD (302) 97
LCB (303) 7 48
RCB (304) 7 48


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1, on right: 0
declarationList (52)
    on left: 2 3, on right: 1 2
declaration (53)
    on left: 4 5 6, on right: 2
recDeclaration (54)
    on left: 7, on right: 6
varDeclaration (55)
    on left: 8, on right: 4
scopedVarDeclaration (56)
    on left: 9, on right: 49
varDeclList (57)
    on left: 10 11, on right: 8 9 10
varDeclInitialize (58)
    on left: 12 13, on right: 10 11
varDeclId (59)
    on left: 14 15, on right: 12 13
scopedTypeSpecifier (60)
    on left: 16 17, on right: 9
typeSpecifier (61)
    on left: 18 19, on right: 8 16 17 23 29
returnTypeSpecifier (62)
    on left: 20 21 22, on right: 18
funDeclaration (63)
    on left: 23 24, on right: 5
params (64)
    on left: 25 26, on right: 23 24
paramList (65)
    on left: 27 28, on right: 25 27
paramTypeList (66)
    on left: 29, on right: 27 28
paramIdList (67)
    on left: 30 31, on right: 29 30
paramId (68)
    on left: 32 33, on right: 30 31
statement (69)
    on left: 34 35, on right: 23 24 51
matched (70)
    on left: 36 37 38, on right: 34 36 37 39 41
unmatched (71)
    on left: 39 40 41 42, on right: 35 40 41 42
iterationHeader (72)
    on left: 43, on right: 37 42
otherStmt (73)
    on left: 44 45 46 47, on right: 38
compoundStmt (74)
    on left: 48, on right: 45
localDeclarations (75)
    on left: 49 50, on right: 7 48 49
statementList (76)
    on left: 51 52, on right: 48 51
expressionStmt (77)
    on left: 53 54, on right: 44
returnStmt (78)
    on left: 55 56, on right: 46
breakStmt (79)
    on left: 57, on right: 47
expression (80)
    on left: 58 59 60 61 62 63 64 65, on right: 53 56 58 59 60 61 62
    96 99 105 106
simpleExpression (81)
    on left: 66 67, on right: 12 36 39 40 41 43 65 66
andExpression (82)
    on left: 68 69, on right: 66 67 68
unaryRelExpression (83)
    on left: 70 71, on right: 68 69 70
relExpression (84)
    on left: 72 73, on right: 71
relop (85)
    on left: 74 75 76 77 78 79, on right: 72
sumExpression (86)
    on left: 80 81, on right: 72 73 80
sumop (87)
    on left: 82 83, on right: 80
term (88)
    on left: 84 85, on right: 80 81 84
mulop (89)
    on left: 86 87 88, on right: 84
unaryExpression (90)
    on left: 89 90, on right: 84 85 89
unaryop (91)
    on left: 91 92 93, on right: 89
factor (92)
    on left: 94 95, on right: 90
mutable (93)
    on left: 96 97 98, on right: 58 59 60 61 62 63 64 95 96 97
immutable (94)
    on left: 99 100 101, on right: 94
call (95)
    on left: 102, on right: 100
args (96)
    on left: 103 104, on right: 102
argList (97)
    on left: 105 106, on right: 103 105
constant (98)
    on left: 107 108 109, on right: 101


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (declarationList)

    program          go to state 1
    declarationList  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: declarationList .
    2 declarationList: declarationList . declaration

    ID       shift, and go to state 4
    RECTYPE  shift, and go to state 5
    RECORD   shift, and go to state 6
    INT      shift, and go to state 7
    BOOL     shift, and go to state 8
    CHAR     shift, and go to state 9

    $default  reduce using rule 1 (program)

    declaration          go to state 10
    recDeclaration       go to state 11
    varDeclaration       go to state 12
    typeSpecifier        go to state 13
    returnTypeSpecifier  go to state 14
    funDeclaration       go to state 15


State 3

    0 $accept: program $end .

    $default  accept


State 4

   24 funDeclaration: ID . LPAREN params RPAREN statement

    LPAREN  shift, and go to state 16


State 5

   19 typeSpecifier: RECTYPE .

    $default  reduce using rule 19 (typeSpecifier)


State 6

    7 recDeclaration: RECORD . RECTYPE LCB localDeclarations RCB

    RECTYPE  shift, and go to state 17


State 7

   20 returnTypeSpecifier: INT .

    $default  reduce using rule 20 (returnTypeSpecifier)


State 8

   21 returnTypeSpecifier: BOOL .

    $default  reduce using rule 21 (returnTypeSpecifier)


State 9

   22 returnTypeSpecifier: CHAR .

    $default  reduce using rule 22 (returnTypeSpecifier)


State 10

    2 declarationList: declarationList declaration .

    $default  reduce using rule 2 (declarationList)


State 11

    6 declaration: recDeclaration .

    $default  reduce using rule 6 (declaration)


State 12

    4 declaration: varDeclaration .

    $default  reduce using rule 4 (declaration)


State 13

    8 varDeclaration: typeSpecifier . varDeclList SCOLON
   23 funDeclaration: typeSpecifier . ID LPAREN params RPAREN statement

    ID  shift, and go to state 18

    varDeclList        go to state 19
    varDeclInitialize  go to state 20
    varDeclId          go to state 21


State 14

   18 typeSpecifier: returnTypeSpecifier .

    $default  reduce using rule 18 (typeSpecifier)


State 15

    5 declaration: funDeclaration .

    $default  reduce using rule 5 (declaration)


State 16

   24 funDeclaration: ID LPAREN . params RPAREN statement

    RECTYPE  shift, and go to state 5
    INT      shift, and go to state 7
    BOOL     shift, and go to state 8
    CHAR     shift, and go to state 9

    $default  reduce using rule 26 (params)

    typeSpecifier        go to state 22
    returnTypeSpecifier  go to state 14
    params               go to state 23
    paramList            go to state 24
    paramTypeList        go to state 25


State 17

    7 recDeclaration: RECORD RECTYPE . LCB localDeclarations RCB

    LCB  shift, and go to state 26


State 18

   14 varDeclId: ID . LSQB NUMCONST RSQB
   15          | ID .
   23 funDeclaration: typeSpecifier ID . LPAREN params RPAREN statement

    LPAREN  shift, and go to state 27
    LSQB    shift, and go to state 28

    $default  reduce using rule 15 (varDeclId)


State 19

    8 varDeclaration: typeSpecifier varDeclList . SCOLON
   10 varDeclList: varDeclList . COMMA varDeclInitialize

    COMMA   shift, and go to state 29
    SCOLON  shift, and go to state 30


State 20

   11 varDeclList: varDeclInitialize .

    $default  reduce using rule 11 (varDeclList)


State 21

   12 varDeclInitialize: varDeclId . COLON simpleExpression
   13                  | varDeclId .

    COLON  shift, and go to state 31

    $default  reduce using rule 13 (varDeclInitialize)


State 22

   29 paramTypeList: typeSpecifier . paramIdList

    ID  shift, and go to state 32

    paramIdList  go to state 33
    paramId      go to state 34


State 23

   24 funDeclaration: ID LPAREN params . RPAREN statement

    RPAREN  shift, and go to state 35


State 24

   25 params: paramList .
   27 paramList: paramList . SCOLON paramTypeList

    SCOLON  shift, and go to state 36

    $default  reduce using rule 25 (params)


State 25

   28 paramList: paramTypeList .

    $default  reduce using rule 28 (paramList)


State 26

    7 recDeclaration: RECORD RECTYPE LCB . localDeclarations RCB

    $default  reduce using rule 50 (localDeclarations)

    localDeclarations  go to state 37


State 27

   23 funDeclaration: typeSpecifier ID LPAREN . params RPAREN statement

    RECTYPE  shift, and go to state 5
    INT      shift, and go to state 7
    BOOL     shift, and go to state 8
    CHAR     shift, and go to state 9

    $default  reduce using rule 26 (params)

    typeSpecifier        go to state 22
    returnTypeSpecifier  go to state 14
    params               go to state 38
    paramList            go to state 24
    paramTypeList        go to state 25


State 28

   14 varDeclId: ID LSQB . NUMCONST RSQB

    NUMCONST  shift, and go to state 39


State 29

   10 varDeclList: varDeclList COMMA . varDeclInitialize

    ID  shift, and go to state 40

    varDeclInitialize  go to state 41
    varDeclId          go to state 21


State 30

    8 varDeclaration: typeSpecifier varDeclList SCOLON .

    $default  reduce using rule 8 (varDeclaration)


State 31

   12 varDeclInitialize: varDeclId COLON . simpleExpression

    ID         shift, and go to state 42
    NUMCONST   shift, and go to state 43
    CHARCONST  shift, and go to state 44
    BOOLCONST  shift, and go to state 45
    NOT        shift, and go to state 46
    ASTERISK   shift, and go to state 47
    RANDOM     shift, and go to state 48
    DASH       shift, and go to state 49
    LPAREN     shift, and go to state 50
